# Networking-Server

./: .gitignore  CMakeLists.txt  README.md
include/messages/: basic_message.h  client_messages.h  common.h  message.h  network_list.h  network_map.h  network_string.h  serializer.h  server_messages.h
include/network/: message_reader.h  network_reader.h  socket.h  socket_options.h
include/utilities/: byte_inserter.h  consteval_string.h  constexpr_string.h  miscellaneous.h  monitor.h  move_only_function.h  smart_struct.h  thread_pool.h  thread_safe_queue.h
src/: messenger.cpp  messenger.h  random.cpp  random.h  server.cpp  server_state.h
src/network/: message_reader.cpp  network_reader.cpp  socket.cpp
